--- a/packages/pq-account/js/minimal.html
+++ b/packages/pq-account/js/minimal.html
@@ -365,7 +365,7 @@ async function showEoaBalance(provider, address, accountDeployed) {
             return true;
         } else {
             const eth = parseFloat(ethers.formatEther(wei)).toFixed(5);
-            row.innerHTML = '<span class="balance-info">EOA BALANCE: ' + eth + ' ETH</span>';
+            row.innerHTML = '<span class="balance-info">EOA ADDRESS: ' + address + '<br>EOA BALANCE: ' + eth + ' ETH</span>';
             return false;
         }
     } catch (_) { return false; }
@@ -439,7 +439,7 @@ $('btnCreate').addEventListener('click', async () => {
         }
 
         if (accountDeployed) {
-            setStatus(s, 'Account exists: ' + expectedAddr, 'ok');
+            setStatus(s, 'PQ Account exists: ' + expectedAddr, 'ok');
             const smartEmpty = (await provider.getBalance(expectedAddr)) === 0n;
             if (!smartEmpty) $('btnSend').disabled = false;
             return;
@@ -458,7 +458,7 @@ $('btnCreate').addEventListener('click', async () => {
         await tx.wait();
 
         $('from').value = expectedAddr;
-        setStatus(s, 'Account created: ' + expectedAddr, 'ok');
+        setStatus(s, 'PQ Account created: ' + expectedAddr, 'ok');
         await showEoaBalance(provider, preQuantumPubKey, true);
         await show4337Balance(provider, expectedAddr);
 
